@@ -50,21 +50,48 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.mortbay.jetty.alpn/alpn-boot -->
-<!--        <dependency>-->
-<!--            <groupId>org.mortbay.jetty.alpn</groupId>-->
-<!--            <artifactId>alpn-boot</artifactId>-->
-<!--            <version>8.1.13.v20181017</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.mortbay.jetty.alpn</groupId>-->
+        <!--            <artifactId>alpn-boot</artifactId>-->
+        <!--            <version>8.1.13.v20181017</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
+
+    <build>
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <!--                    <compilerArgs>&#45;&#45;source 19</compilerArgs>-->
+                    <compilerArgs>--enable-preview</compilerArgs>
+                    <compilerVersion>20</compilerVersion>
+                    <source>20</source>
+                    <target>20</target>
+                </configuration>
+            </plugin>
+
+
+        </plugins>
+
+
+    </build>
+
 
 </project>
